Lots of changes, struggling to pass unit tests