@@ -15,21 +15,22 @@ public class GameService {
         this.authAccess = authAccess;
     }
 
-    public HashSet<GameData> listGames(String authToken) throws UnauthorizedException, DataAccessException {
+    private AuthData checkAuthorization(String authToken) throws UnauthorizedException {
         try {
-            authAccess.getAuth(authToken);
+            return authAccess.getAuth(authToken);
         } catch (DataAccessException e) {
-            throw new UnauthorizedException();
+            e.printStackTrace();
+            throw new UnauthorizedException("Invalid or expired authentication token.");
         }
+    }
+
+    public HashSet<GameData> listGames(String authToken) throws UnauthorizedException, DataAccessException {
+        checkAuthorization(authToken);
         return gameAccess.listGames();
     }
 
     public int createGame(String authToken, String gameName) throws UnauthorizedException, DataAccessException {
-        try {
-            authAccess.getAuth(authToken);
-        } catch (DataAccessException e) {
-            throw new UnauthorizedException();
-        }
+        checkAuthorization(authToken);
 
         Random rand = new Random();
         int gameID;
@@ -43,20 +44,14 @@ public class GameService {
     }
 
     public boolean joinGame(String authToken, int gameID, String color) throws UnauthorizedException, BadRequestException, DataAccessException {
+        AuthData authData = checkAuthorization(authToken);
 
-        AuthData authData;
         GameData gameData;
-
-        try {
-            authData = authAccess.getAuth(authToken);
-        } catch (DataAccessException e) {
-            throw new UnauthorizedException();
-        }
-
         try {
             gameData = gameAccess.getGame(gameID);
         } catch (DataAccessException e) {
-            throw new BadRequestException(e.getMessage());
+            e.printStackTrace();
+            throw new BadRequestException("Game not found: " + e.getMessage());
         }
 
         String whiteUser = gameData.whiteUsername();
@@ -77,14 +72,14 @@ public class GameService {
         } else if (color == null || color.isEmpty()) {
             throw new BadRequestException("Error: Player color cannot be null or empty");
         } else {
-            throw new BadRequestException("%s is not a valid team color".formatted(color));
+            throw new BadRequestException(String.format("%s is not a valid team color", color));
         }
+
         gameAccess.updateGame(new GameData(gameData.game(), gameID, gameData.gameName(), whiteUser, blackUser));
         return true;
     }
 
     public void clear() throws DataAccessException {
         gameAccess.clear();
-        authAccess.clear();
     }
 }
